corrected letter spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ h1 {
   color: #313f47;
   line-height: 1.5;
   font-size: 1.85em;
-  letter-spacing: 0.22em;
+  letter-spacing: 0.15em;
   margin: 0 0 0.525em 0;
 }
 
